--- a/public/manifest.json
+++ b/public/manifest.json
@@ -46,5 +46,7 @@
     "orientation": "portrait",
     "display": "standalone",
     "start_url": "index.html",
-    "description": "An app that allows you to keep track of your money"
+    "description": "An app that allows you to keep track of your money",
+    "background_color": "#01579b",
+    "theme_color": "#ffffff"
   }
